Comming soon mobile fix

--- a/src/containers/CommingSoon/CommingSoon.scss
+++ b/src/containers/CommingSoon/CommingSoon.scss
@@ -25,7 +25,6 @@ p {
 }
 
 body {
-
   background: url('./test.jpg') no-repeat center center;
   background-size: cover;
   background-color: #0277BD;
@@ -33,13 +32,14 @@ body {
 
 
 .header {
-  margin-top: 50px;
+  padding-top: 50px;
   display: flex;
   width: 100%;
   justify-content: center;
   align-content: center;
 
   @media only screen and (min-width: 64.063em) { 
+  padding-top: 100px;
 
   }
 }
@@ -52,8 +52,7 @@ body {
 }
 
 .logo {
-  height: 400px;
-  padding: 100px;
+  padding: 50px;
   background-color: rgba(0,0,0,0.5);
   border-radius: 5px;
   display: flex;
@@ -65,6 +64,8 @@ body {
   font-size: 28px;
 
   @media only screen and (min-width: 64.063em) { 
+    height: 400px;
+    padding: 100px;
     font-size: 40px;
 
     img {
@@ -73,6 +74,7 @@ body {
   }
 
   img {
+    opacity: 0.9;
     max-height: 120px;
     margin-bottom: 10px;
   }
